<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:backgroundTint="@color/_4DB6AC"
    tools:context=".PlayMusicActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="@dimen/_0dp"
        app:contentInsetStart="@dimen/_0dp"
        app:contentInsetStartWithNavigation="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/now_playing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_24sp" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/songCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50dp"
        android:contentDescription="@string/song_cover"
        android:scaleType="centerCrop"
        android:src="@drawable/guitar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomView"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/_757575"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:contentDescription="@string/fav"
            android:src="@drawable/ic_round_favorite_border_24px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_toStartOf="@id/download"
            android:layout_toEndOf="@id/fav"
            android:contentDescription="@string/queue"
            android:src="@drawable/ic_queue_black_24dp" />

        <ImageView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_toStartOf="@id/playlist"
            android:contentDescription="@string/download"
            android:src="@drawable/ic_file_download_black_24dp" />

        <ImageView
            android:id="@+id/playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_toStartOf="@id/share"
            android:contentDescription="@string/playlist"
            android:src="@drawable/ic_playlist_add_black_24dp" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share_black_24dp" />

    </RelativeLayout>

    <include
        android:id="@+id/bottomView"
        layout="@layout/layout_media_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>